<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/recipeTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recipe Title"
            android:textColor="@color/colorPrimary"
            android:textSize="30dp" />
        <TextView
            android:id="@+id/recipeAuthor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Author"
            android:textColor="@color/colorAccent" />
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/leftbutton"
                android:scaleType="centerInside"
                android:id="@+id/prevImage"
                android:onClick="prevPhoto"/>
            <ImageSwitcher
                android:id="@+id/switcher"
                android:layout_width="325dp"
                android:layout_height="200dp"/>

            <ImageButton
                android:id="@+id/nextImage"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:background="@drawable/rigthbutton"
                android:onClick="nextPhoto"
                android:scaleType="centerInside" />

        </LinearLayout>

        <TextView
            android:id="@+id/ingredientsHeader"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/ingredients"
            android:textSize="22dp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/serving_size_select"
                android:textSize="18dp" />
            <Spinner
                android:id="@+id/servingsDropdown"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:entries="@array/dropdown"/>
        </LinearLayout>
        <TextView
            android:id="@+id/servingsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creates_servings"
            android:textSize="18dp"
            android:textStyle="bold" />
        <LinearLayout
            android:id="@+id/ingredientList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />
        <TextView
            android:id="@+id/textView13"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions"
            android:textSize="22dp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/recipeInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/directions_hint"
            android:textSize="18dp" />

    </LinearLayout>
</ScrollView>